[gd_scene load_steps=14 format=3 uid="uid://cc2upwggqa5h0"]

[ext_resource type="Script" path="res://Main.gd" id="1_iwyho"]
[ext_resource type="Script" path="res://Camera.gd" id="2_huj08"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_25fwy"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_nfjew"]
sky_material = SubResource("ProceduralSkyMaterial_25fwy")

[sub_resource type="Environment" id="Environment_3ohk6"]
background_mode = 2
sky = SubResource("Sky_nfjew")
ambient_light_sky_contribution = 0.8
tonemap_mode = 2
glow_enabled = true

[sub_resource type="BoxMesh" id="BoxMesh_lhuwr"]
size = Vector3(40, 2, 40)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_71dh3"]
vertex_color_use_as_albedo = true

[sub_resource type="CylinderMesh" id="CylinderMesh_4g0yj"]
material = SubResource("StandardMaterial3D_71dh3")
top_radius = 0.05
bottom_radius = 0.05
height = 1.0
radial_segments = 32
rings = 8
cap_top = false
cap_bottom = false

[sub_resource type="MultiMesh" id="MultiMesh_jl5hn"]
transform_format = 1
use_colors = true
mesh = SubResource("CylinderMesh_4g0yj")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_uylmo"]
vertex_color_use_as_albedo = true

[sub_resource type="SphereMesh" id="SphereMesh_qukvq"]
material = SubResource("StandardMaterial3D_uylmo")
radius = 0.1
height = 0.2
radial_segments = 32
rings = 8

[sub_resource type="MultiMesh" id="MultiMesh_es0pw"]
transform_format = 1
use_colors = true
mesh = SubResource("SphereMesh_qukvq")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_i52e8"]
cull_mode = 2
vertex_color_use_as_albedo = true

[node name="Main" type="Node"]
script = ExtResource("1_iwyho")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_3ohk6")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.939693, -0.219846, 0.262003, 0, 0.766044, 0.642788, -0.34202, -0.604023, 0.719846, 0, 0, 0)
light_energy = 0.5
shadow_enabled = true
shadow_bias = 0.02
shadow_normal_bias = 1.0
directional_shadow_blend_splits = true
directional_shadow_max_distance = 70.0

[node name="Camera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 12, 22)
fov = 57.0
far = 400.0
script = ExtResource("2_huj08")

[node name="Floor" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
visible = false
mesh = SubResource("BoxMesh_lhuwr")

[node name="MultiMeshBeams" type="MultiMeshInstance3D" parent="."]
multimesh = SubResource("MultiMesh_jl5hn")

[node name="MultiMeshNodes" type="MultiMeshInstance3D" parent="."]
multimesh = SubResource("MultiMesh_es0pw")

[node name="RoadMeshInstance" type="MeshInstance3D" parent="."]
material_override = SubResource("StandardMaterial3D_i52e8")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LabelFPS" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -94.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 47.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 16
horizontal_alignment = 2

[node name="LabelPhys" type="Label" parent="UI"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 99.0
offset_bottom = 121.0
theme_override_font_sizes/font_size = 16
